# Timelapse_sun_events_from_home

./: .gitignore  CAMERA_REFACTORING_SUMMARY.md  CAMERA_SHOOTING_ENDPOINT.md  CONFIGURATION_MANAGEMENT.md  ERROR_FIXES_SUMMARY.md  ERROR_HANDLING.md  README.md  extract_events.py  main.py  pyproject.toml  test_async_fix.py  test_background_logic.py  test_camera_router.py  test_camera_shoot.py  test_camera_shooting.py  test_chdkptp_commands.py  test_configuration_system.py  test_error_handling_fixes.py  test_fastapi_schema.py  test_get_last_picture.py  test_list_images.py  test_live_view.py  test_live_view_simple.py
.cursor/rules/: guidelines.mdc
app/api/: __init__.py
app/api/infrastructure/: camera_router.py  fastapi_app.py
app/application/: use_cases.py
app/background/: __init__.py
app/background/infrastructure/: sun_event_monitor_service.py  sun_event_orchestrator.py
app/camera/application/: use_cases.py
app/camera/domain/: entities.py  services.py
app/camera/infrastructure/: chdkptp_camera_service.py  configuration_service.py  container.py  error_handling_service.py  file_management_service.py  image_processing_service.py  refactored_camera_service.py  subprocess_service.py
app/domain/: entities.py  repositories.py
app/infrastructure/: api.py  background_service.py  repositories.py
app/sun_events/application/: use_cases.py
app/sun_events/domain/: entities.py  repositories.py
app/sun_events/infrastructure/: json_repository.py
config/: camera_config.json  sun_events.db  sun_events.json
tests/: test_repository.py
(+4 files in other folders)
